--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ authors = [
 serenity = "0.12"
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
 dotenvy = "0.15.7"
+poise = "0.6.1"
