--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ serenity = "0.12"
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
 dotenvy = "0.15.7"
 poise = "0.6.1"
+rss = "2.0.9"
+reqwest = "0.12.9"
