--- a/src/email_mod/Cargo.toml
+++ b/src/email_mod/Cargo.toml
@@ -4,4 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rusqlite = { version = "0.32.0", features = ["bundled"] }
+email_address = "0.2.9"
+sea-orm = { version = "1.1.1", features = ["sqlx-sqlite"] }
+tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
+anyhow = "1.0.93"
+rand = "0.8.5"
+serenity = "0.12"
+poise = "0.6.1"
+rss = "2.0.9"
+reqwest = "0.12.9"
