Updated file structure & co. to work with shuttle.dev deployments!

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,9 @@
 
 /target
 
-# Environment variables, namely Discord Token
+# Environment variables
 .env
+Secrets.toml
+Secrets.dev.toml
+
+.shuttle 
