--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,8 @@ dotenvy = "0.15.7"
 poise = "0.6.1"
 rss = "2.0.9"
 reqwest = "0.12.9"
+axum = "0.7.4"
+shuttle-serenity = "0.49.0"
+shuttle-runtime = "0.49.0"
 
 
